--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 			<img src="images/the-beacon.jpg" alt="">
 			<div>
 				<h2 class="div-h2">La luz que orienta a toda la humanidad</h2>
-				<span>Nuestras plantillas se crean con alegria</span>
-				<span>inspiration, checked for quality and originality</span>
-				<span>and meticulously sliced and coded.</span>
+				<span>Nuestras plantillas se crean con alegria,</span>
+				<span>inspiracion, con calidad y originalidad</span>
+				<span>y meticulosamente programadas.</span>
 				<a href="blog-single-post.html" class="more">read more</a>
 			</div>
 		</div>
